Resolves #113: Objective is now named Points Race

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -119,7 +119,7 @@
     "calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
     "calamity.book.toggleGamemode": "Game mode",
     "calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
-    "calamity.goal": "Finish line",
+    "calamity.goal": "Points Race",
     "calamity.hover.moesh.twitter": "Open twitter.com/HeartlessMoesh",
     "calamity.hover.moesh.github": "Open github.com/Moesh",
     "calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
