Refactored generator output. Fixes #115.

--- a/resourcepacks/calamity/assets/calamity/lang/da_dk.json
+++ b/resourcepacks/calamity/assets/calamity/lang/da_dk.json
@@ -71,10 +71,10 @@
     "calamity.resetItems.haventChosen": "Du har ikke valgt en start genstand. Intet at nulstille.",
     "calamity.resetItems": "Du vil nu vælge en ny start genstand næste gang du dør.",
     "calamity.resetting": "Nustiller til standard tilstand",
-    "calamity.generator.output.attackedEffect": "Gav [%s%3$s] for %s sekunder",
-    "calamity.generator.output.attackEffect": "Sendte fjender [%s%3$s] for %s sekunder",
+    "calamity.generator.output.effect.given.level": "Gav [%s%3$s] for %s sekunder",
+    "calamity.generator.output.effect.sent.level": "Sendte fjender [%s%3$s] for %s sekunder",
     "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "Gav [%s%3$s] for %s sekunder",
+    "calamity.generator.output.effect.given": "Gav [%s%3$s] for %s sekunder",
     "calamity.generator.output.item": "Gav [%s] * %s",
     "calamity.generator.sign.activated": "Aktiveret!",
     "calamity.generator.sign.attack": "%s sek. angrab",
