--- a/resourcepacks/calamity/assets/calamity/lang/de_de.json
+++ b/resourcepacks/calamity/assets/calamity/lang/de_de.json
@@ -71,10 +71,10 @@
     "calamity.resetItems.haventChosen": "Du hast noch kein Item ausgewählt, also kann es nicht zurückgesetzt werden.",
     "calamity.resetItems": "Wenn du das nächste mal respawnst, kannst du ein neues Item auswählen.",
     "calamity.resetting": "Wird in den Standardzustand zurückgesetzt",
-    "calamity.generator.output.attackedEffect": "[%s%3$s] für %s Sekunden gegeben",
-    "calamity.generator.output.attackEffect": "[%s%3$s] für %s an die Gegner geschickt",
+    "calamity.generator.output.effect.given.level": "[%s%3$s] für %s Sekunden gegeben",
+    "calamity.generator.output.effect.sent.level": "[%s%3$s] für %s an die Gegner geschickt",
     "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "[%s%3$s] für %s Sekunden erhalten",
+    "calamity.generator.output.effect.given": "[%s%3$s] für %s Sekunden erhalten",
     "calamity.generator.output.item": "[%s] * %s erhalten",
     "calamity.generator.sign.activated": "Aktiviert!",
     "calamity.generator.sign.attack": "%ss für Gegner",
