--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -71,11 +71,10 @@
     "calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
     "calamity.resetItems": "You will get to select a new item the next time you respawn.",
     "calamity.resetting": "Resetting to default state",
-    "calamity.generator.output.attackedEffect": "Given [%s%3$s] for %s seconds",
-    "calamity.generator.output.attackEffect": "Sent enemy [%s%3$s] for %s seconds",
-    "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "Given [%s%3$s] for %s seconds",
-    "calamity.generator.output.item": "Given [%s] * %s",
+    "calamity.generator.output.effect.given.level": "Given %s %s for %s seconds",
+    "calamity.generator.output.effect.sent.level": "Sent enemy %s %s for %s seconds",
+    "calamity.generator.output.effect.given": "Given %s for %s seconds",
+    "calamity.generator.output.item": "Given %s %s",
     "calamity.generator.sign.activated": "Activated!",
     "calamity.generator.sign.attack": "%s sec. attack",
     "calamity.generator.sign.enchant": "For main hand",
