--- a/resourcepacks/calamity/assets/calamity/lang/es_es.json
+++ b/resourcepacks/calamity/assets/calamity/lang/es_es.json
@@ -71,10 +71,10 @@
     "calamity.resetItems.haventChosen": "Todavía no has escogido ningún objeto.",
     "calamity.resetItems": "Podrás elegir un objeto diferente la próxima vez que reaparezcas.",
     "calamity.resetting": "Restableciendo el mapa",
-    "calamity.generator.output.attackedEffect": "Habéis recibido [%s%3$s] durante %s segundos",
-    "calamity.generator.output.attackEffect": "El enemigo ha recibido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.effect.given.level": "Habéis recibido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.effect.sent.level": "El enemigo ha recibido [%s%3$s] durante %s segundos",
     "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "Habéis obtenido [%s%3$s] durante %s segundos",
+    "calamity.generator.output.effect.given": "Habéis obtenido [%s%3$s] durante %s segundos",
     "calamity.generator.output.item": "Has obtenido [%s] * %s",
     "calamity.generator.sign.activated": "¡Activado!",
     "calamity.generator.sign.attack": "Ataque de %ss",
