--- a/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
+++ b/resourcepacks/calamity/assets/calamity/lang/fr_fr.json
@@ -53,9 +53,9 @@
     "calamity.generator.enchantedItem.announced.invalid": "%s %s a essayé d'enchanter un objet mais n'a pas réussi !",
     "calamity.generator.enchantedItem.invalid": "Aucun objet valide trouvé dans la main principale. Prends ce %s.",
     "calamity.generator.enchantedItem.valid": "Objet valide trouvé ! %s a été donné.",
-    "calamity.generator.output.attackEffect": "Envoie de l'effet [%s%3$s] à l'ennemi pendant %s secondes",
-    "calamity.generator.output.attackedEffect": "Application de l'effet [%s%3$s] pendant %s secondes",
-    "calamity.generator.output.effect": "Application de l'effet [%s%3$s] pendant %s secondes",
+    "calamity.generator.output.effect.sent.level": "Envoie de l'effet [%s%3$s] à l'ennemi pendant %s secondes",
+    "calamity.generator.output.effect.given.level": "Application de l'effet [%s%3$s] pendant %s secondes",
+    "calamity.generator.output.effect.given": "Application de l'effet [%s%3$s] pendant %s secondes",
     "calamity.generator.output.effect.level2": " II",
     "calamity.generator.output.item": "Don de [%s] * %s",
     "calamity.generator.sign.activated": "Activé !",
