--- a/resourcepacks/calamity/assets/calamity/lang/ru_ru.json
+++ b/resourcepacks/calamity/assets/calamity/lang/ru_ru.json
@@ -71,10 +71,10 @@
     "calamity.resetItems.haventChosen": "Вы не выбрали предмет. Нечего изменять.",
     "calamity.resetItems": "Вы сможете выбрать новый предмет при следующем возрождении.",
     "calamity.resetting": "Сброс в состояние по умолчанию",
-    "calamity.generator.output.attackedEffect": "Применён эффект [%s%3$s] на %s секунд",
-    "calamity.generator.output.attackEffect": "Выдано противникам [%s%3$s] на %s секунд",
+    "calamity.generator.output.effect.given.level": "Применён эффект [%s%3$s] на %s секунд",
+    "calamity.generator.output.effect.sent.level": "Выдано противникам [%s%3$s] на %s секунд",
     "calamity.generator.output.effect.level2": " II",
-    "calamity.generator.output.effect": "Выдано [%s%3$s] за %s секунд",
+    "calamity.generator.output.effect.given": "Выдано [%s%3$s] за %s секунд",
     "calamity.generator.output.item": "Выдано [%s] * %s",
     "calamity.generator.sign.activated": "Активировано!",
     "calamity.generator.sign.attack": "%s сек. аттак",
