Arenas and data now all load correctly
Also fixes #111

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -1,11 +1,11 @@
 {
     "death.attack.outOfWorld": "%1$s fell to calamity",
     "commands.trigger.failed.unprimed": "You're not able to use this command right now",
-    "map.name": "Calamity",
+    "map.name": "Calamity: Definitive Edition",
     "by.author": "by %s",
     "map.author": "Moesh",
     "map.author.hover.link": "Click to view link",
-    "arena.calamity.name": "Calamity",
+    "arena.calamity.name": "Calamity Modern",
     "arena.calamity.author": "Moesh",
     "arena.shattering.name": "Shattering",
     "arena.shattering.author": "Moesh",
@@ -98,10 +98,8 @@
     "calamity.team.notReady.red": "%s %s says hol' up %s",
     "calamity.team.ready": "%s %s is ready %s",
     "calamity.troll": "%s fell in the troll hole! How embarrassing!",
-    "calamity.welcome.objective": "Objective: Collect enough points to reach the score goal. Click %s to view the online readme!",
-    "calamity.welcome": "Welcome to Calamity: Definitive Edition! Created by Moesh.",
+    "calamity.welcome.objective": "Objective: Calamity is a resource management team race. The first team to get to the point limit wins. Gaining points isn't the only way to win. You can lower the point limit by removing iron ore from the mines. Click %s to view the readme.",
     "book.pageIndicator": "§ov5.0.0",
-    "map.author.name": "Moesh",
     "arena.calamity.icon": "z",
     "arena.shattering.icon": "x",
     "calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
