This is not a recolor

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -12,7 +12,7 @@
     "arena.calamity.welcome":"Current arena: %s by %s",
     "arena.calamity.name": "Calamity Modern",
     "arena.calamity.author": "Moesh",
-    "arena.shattering.name": "Shattering (Modern recolor)",
+    "arena.shattering.name": "Shattering",
     "arena.shattering.author": "Moesh",
     "spacer.brackets.left": " (%s)",
     "spacer.left": " %s",
