Resolves #124. Shattering is fully implemented

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -10,10 +10,10 @@
     "calamity.welcome.scripting.by.value":"Jeven, gibbsly, NateThePlate, Panguino, Ts, and Vilder50",
     "map.author.hover.link": "Click to view link",
     "arena.calamity.welcome":"Current arena: %s by %s",
-    "arena.calamity.name": "Calamity Modern",
+    "arena.calamity.name": "Calamity (Modern)",
     "arena.calamity.author": "Moesh",
     "arena.shattering.name": "Shattering",
-    "arena.shattering.author": "Moesh",
+    "arena.shattering.author": "Panguino",
     "spacer.brackets.left": " (%s)",
     "spacer.left": " %s",
     "spacer.right": "%s ",
@@ -75,11 +75,11 @@
     "calamity.resetItems.alreadyChosen": "You have already chosen to reset your item next time you respawn.",
     "calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
     "calamity.resetItems": "You will get to select a new item the next time you respawn.",
-    "calamity.resetting": "Resetting to default state",
+    "calamity.resetting": "Resetting arena, please stand-by.",
     "calamity.generator.output.effect.given.level": "Given %s %s for %s seconds",
     "calamity.generator.output.effect.sent.level": "Sent enemy %s %s for %s seconds",
     "calamity.generator.output.effect.given": "Given %s for %s seconds",
-    "calamity.generator.output.item": "Given %s %s",
+    "calamity.generator.output.item": "Given %2$s [%1$s]",
     "calamity.generator.sign.activated": "Activated!",
     "calamity.generator.sign.attack": "%s sec. attack",
     "calamity.generator.sign.enchant": "For main hand",
@@ -104,6 +104,7 @@
     "calamity.team.ready": "%s %s is ready %s",
     "calamity.troll": "%s fell in the troll hole! How embarrassing!",
     "calamity.welcome.objective": "Objective: Calamity is a resource management team race. The first team to get to the point limit wins. Gaining points isn't the only way to win. You can lower the point limit by removing iron ore from the mines. Click %s to view the readme.",
+    "arena.shattering.welcome.objective": "Objective: The first team to get to the point limit wins. Arrows break glass. Generators run much more quickly. Be aggressive! Click %s to view the readme.",
     "book.pageIndicator": "§ov5.0.0",
     "arena.calamity.icon": "z",
     "arena.shattering.icon": "x",
@@ -124,6 +125,7 @@
     "calamity.error.noPlayers":"No players are online, ending the match.",
     "calamity.goal": "Points Race",
     "calamity.hover.moesh.twitter": "Open twitter.com/HeartlessMoesh",
+    "calamity.hover.panguino.twitter": "Open twitter.com/Panguino",
     "calamity.hover.moesh.github": "Open github.com/Moesh",
     "calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
     "calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
@@ -141,5 +143,6 @@
     "calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
     "calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
     "calamity.arena.error.sameArena": "This arena is already selected",
-    "calamity.arena.error.cooldown": "Arena selection is on cooldown"   
+    "calamity.arena.error.cooldown": "Arena selection is on cooldown",
+    "calamity.arena.loading":"Switching a new arena, please stand-by. This may take some flippa-watts, confulkiesses, and prokies to load..."
 }
