Changed "Spectate" team to "Sideline"

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -35,7 +35,7 @@
     "calamity.book.objective.2": "The score goal is lowered when iron ore is removed from the central mines.",
     "calamity.book.objective.title": "Objective:",
     "calamity.book.selectArena.title": "Select arena: ",
-    "calamity.book.spectate": "Spectate",
+    "calamity.book.spectate": "Sideline",
     "calamity.book.start": "Start",
     "spacer.or": "%s or %s",
     "calamity.book.teams": "Team:",
