--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -145,5 +145,10 @@
     "calamity.arena.error.sameArena": "This arena is already selected",
     "calamity.arena.error.cooldown": "Arena selection is on cooldown",
     "calamity.arena.loading":"Switching a new arena, please stand-by. This may take some flippa-watts, confulkiesses, and prokies to load...",
-    "calamity.subtitle.laugh":"8-bit laughter"
+    "calamity.subtitle.laugh":"8-bit laughter",
+    "calamity.generator.start":"Generator starts",
+    "calamity.generator.tick":"Generator ticks",
+    "calamity.generator.output":"Generator output",
+    "calamity.generator.ready":"Generator ready",
+    "calamity.generator.enchantment":"Item enchanted"
 }
