Added points streak

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -100,6 +100,7 @@
     "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
     "calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
     "calamity.points": "+%s points",
+    "calamity.points.streak": "+%s points (%s streak)",
     "calamity.prestige.blueForfeit.blue": "You've kept your dignity",
     "calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
     "calamity.prestige.lost": "Lost by %s points",
@@ -122,6 +123,19 @@
     "calamity.sidelines": "%s moved to the sidelines",
     "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
     "calamity.startMatch.countdown": "Match ▶ begins in %s seconds",
+    "calamity.streak.level1.death":"%s: %s point streak ended.",
+    "calamity.streak.level1":"%s is on a %s point streak. Well done!",
+    "calamity.streak.level2.death":"%s: %s point streak ended. Unfortunate, but you had a good run!",
+    "calamity.streak.level2":"%s is on a %s point streak. Quite impressive!",
+    "calamity.streak.level3.death":"%s: %s point streak ended. No spree lasts forever. Well done!",
+    "calamity.streak.level3":"%s is on a %s point streak. You are more than what you seem.",
+    "calamity.streak.level4.death":"%s: %s point streak ended. Looks like you've been dethroned.",
+    "calamity.streak.level4":"%s is on a %s point streak. How is this possible!",
+    "calamity.streak.level5.death":"%s: %s point streak ended. High threat elminated.",
+    "calamity.streak.level5":"%s is on a %s point streak. Can nothing stop you?",
+    "calamity.streak.level6.death":"%s: %s point streak ended. A legend eliminated. Not a moment too soon!",
+    "calamity.streak.level6":"%s is on a %s point streak. A calamitious display!",
+    "calamity.streak.steal.points":"%s steals %s points (%s%%) from %s!",
     "calamity.subtitle.announcer": "Announcer speaks",
     "calamity.subtitle.eye.release": "Eye opened",
     "calamity.subtitle.eye.squish": "Eye squished",
