--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -1,57 +1,91 @@
 {
-    "death.attack.outOfWorld": "%1$s fell to calamity",
-    "commands.trigger.failed.unprimed": "You're not able to use this command right now",
-    "map.name": "Calamity",
-    "by.author": "by %s",
-    "map.author": "Moesh",
-    "calamity.welcome.translation.by":"Translation: %s",
-    "calamity.welcome.translation.by.value":"English [en_us] by %s",
-    "calamity.welcome.scripting.by":"Additional scripting: %s",
-    "calamity.welcome.scripting.by.value":"Jeven, gibbsly, NateThePlate, Panguino, Ts, and Vilder50",
-    "map.author.hover.link": "Click to view link",
-    "arena.calamity.welcome":"Current arena: %s by %s",
-    "arena.calamity.name": "Calamity (Modern)",
     "arena.calamity.author": "Moesh",
-    "arena.shattering.name": "Shattering",
+    "arena.calamity.icon": "z",
+    "arena.calamity.name": "Calamity (Modern)",
+    "arena.calamity.welcome":"Current arena: %s by %s",
     "arena.shattering.author": "Panguino",
-    "spacer.brackets.left": " (%s)",
-    "spacer.left": " %s",
-    "spacer.right": "%s ",
-    "spacer.middle": "%s %s",
-    "system.message": ">>> %s",
-    "team.blue": "Blue",
-    "team.red": "Red",
-    "team.spectator": "Spectator",
+    "arena.shattering.icon": "x",
+    "arena.shattering.name": "Shattering",
+    "arena.shattering.welcome.objective": "Objective: The first team to get to the point limit wins. Arrows break glass. Generators run much more quickly. Be aggressive! Click %s to view the readme.",
+    "book.pageIndicator": "§ov5.0.0",
+    "by.author": "by %s",
+    "calamity.arena.error.cooldown": "Arena selection is on cooldown",
+    "calamity.arena.error.sameArena": "This arena is already selected",
+    "calamity.arena.loading":"Switching a new arena, please stand-by. This may take some flippa-watts, confulkiesses, and prokies to load...",
     "calamity.book.cancelStart": "Cancel",
+    "calamity.book.forfeit": "Forfeit",
     "calamity.book.hover.cancel": "Cancel match start",
+    "calamity.book.hover.forfeit": "Vote to end the match [%s]",
     "calamity.book.hover.joinBlue": "Join the Blue team",
     "calamity.book.hover.joinRed": "Join the Red team",
+    "calamity.book.hover.leaveTeam": "Leave your team. You can still be shuffled onto a team.",
     "calamity.book.hover.notPlaying": "You will not play the next match",
+    "calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
+    "calamity.book.hover.resetSpawnItem": "Choose a new respawn item when you respawn",
+    "calamity.book.hover.shuffle.allPlayers": "Shuffle all players, except spectators",
+    "calamity.book.hover.shuffle.restOfPlayers": "Shuffle players who are not on a team",
     "calamity.book.hover.start": "Start match after 15 seconds",
     "calamity.book.leaveTeam": "Leave team",
     "calamity.book.li.li": "  + ",
     "calamity.book.li": "• ",
+    "calamity.book.matchOptions.title": "Match options:",
     "calamity.book.objective.1": "Gain points by capturing resources, killing, or crafting items with iron ingots. First team to reach the score goal wins!",
     "calamity.book.objective.2": "The score goal is lowered when iron ore is removed from the central mines.",
     "calamity.book.objective.title": "Objective:",
+    "calamity.book.readyTeam": "Ready team",
+    "calamity.book.resetSpawnItem": "Reset spawn item",
     "calamity.book.selectArena.title": "Select arena: ",
+    "calamity.book.shuffle.all": "all",
+    "calamity.book.shuffle.rest": "rest",
+    "calamity.book.shuffle": "Shuffle players:",
     "calamity.book.spectate": "Sideline",
     "calamity.book.start": "Start",
-    "spacer.or": "%s or %s",
     "calamity.book.teams": "Team:",
     "calamity.book.title": "Calamity by Moesh",
-    "calamity.book.matchOptions.title": "Match options:",
-    "calamity.book.forfeit": "Forfeit",
-    "calamity.book.resetSpawnItem": "Reset spawn item",
-    "calamity.book.hover.resetSpawnItem": "Choose a new respawn item when you respawn",
-    "calamity.book.hover.forfeit": "Vote to end the match [%s]",
+    "calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
+    "calamity.book.toggleGamemode": "Game mode",
     "calamity.cheated.yourself": "You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
+    "calamity.click.here": "here",
+    "calamity.enchanted.item": "Enchanted Item",
+    "calamity.error.noPlayers":"No players are online, ending the match.",
     "calamity.feature.notAvailable": "Not available",
     "calamity.forfeit.draw": "It's a draw!",
     "calamity.forfeit.retracted.stopped": "%s has retracted their forfeit vote. Voting stopped.",
     "calamity.forfeit.retracted": "%s has retracted their forfeit vote. %s out of the needed %s players on the team have voted to forfeit the game.",
     "calamity.forfeit.started": "%s has voted to forfeit the game. %s out of the needed %s players have voted to forfeit. Use [%s] to vote.",
     "calamity.forfeit": "%s %s has forfeited!",
+    "calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
+    "calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
+    "calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
+    "calamity.generator.enchantedItem.invalid": "No valid item found in main hand.",
+    "calamity.generator.enchantedItem.valid": "Valid item found! %s given.",
+    "calamity.generator.enchantment":"Item enchanted",
+    "calamity.generator.output.effect.given.level": "Given %s %s for %s seconds",
+    "calamity.generator.output.effect.given": "Given %s for %s seconds",
+    "calamity.generator.output.effect.sent.level": "Sent enemy %s %s for %s seconds",
+    "calamity.generator.output.item": "Given %2$s [%1$s]",
+    "calamity.generator.output":"Generator output",
+    "calamity.generator.ready":"Generator ready",
+    "calamity.generator.sign.activated": "Activated!",
+    "calamity.generator.sign.attack": "%s sec. attack",
+    "calamity.generator.sign.enchant": "For main hand",
+    "calamity.generator.sign.perPlayer": "%s per player",
+    "calamity.generator.sign.perTeam": "%s sec. for team",
+    "calamity.generator.sign.progress": "Charging: %s%%",
+    "calamity.generator.sign.ready": "Ready",
+    "calamity.generator.sign.resetting": "Resetting: %s%%",
+    "calamity.generator.sign.type": "[%s%s]",
+    "calamity.generator.start":"Generator starts",
+    "calamity.generator.statusMessage.chargeSecond": "Charging: %s second left",
+    "calamity.generator.statusMessage.chargeSeconds": "Charging: %s seconds left",
+    "calamity.generator.statusMessage.resettingSecond": "Resetting: %s second left",
+    "calamity.generator.statusMessage.resettingSeconds": "Resetting: %s seconds left",
+    "calamity.generator.tick":"Generator ticks",
+    "calamity.goal": "Points Race",
+    "calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
+    "calamity.hover.moesh.github": "Open github.com/Moesh",
+    "calamity.hover.moesh.twitter": "Open twitter.com/HeartlessMoesh",
+    "calamity.hover.panguino.twitter": "Open twitter.com/Panguino",
     "calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
     "calamity.hover.viewGitHub": "Click to view the GitHub repo",
     "calamity.joined.team": "%s joined %s",
@@ -59,9 +93,11 @@
     "calamity.match.cancelled.byPlayer": "%s %s cancelled a match",
     "calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
     "calamity.match.cancelled": "Match %s cancelled",
+    "calamity.match.started.byPlayer": "%s %s started a match",
     "calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
     "calamity.notReady": "Not ready",
     "calamity.out.of.bounds": "Out of bounds!",
+    "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
     "calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
     "calamity.points": "+%s points",
     "calamity.prestige.blueForfeit.blue": "You've kept your dignity",
@@ -76,79 +112,43 @@
     "calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
     "calamity.resetItems": "You will get to select a new item the next time you respawn.",
     "calamity.resetting": "Resetting arena, please stand-by.",
-    "calamity.generator.output.effect.given.level": "Given %s %s for %s seconds",
-    "calamity.generator.output.effect.sent.level": "Sent enemy %s %s for %s seconds",
-    "calamity.generator.output.effect.given": "Given %s for %s seconds",
-    "calamity.generator.output.item": "Given %2$s [%1$s]",
-    "calamity.generator.sign.activated": "Activated!",
-    "calamity.generator.sign.attack": "%s sec. attack",
-    "calamity.generator.sign.enchant": "For main hand",
-    "calamity.generator.sign.perPlayer": "%s per player",
-    "calamity.generator.sign.perTeam": "%s sec. for team",
-    "calamity.generator.sign.progress": "Charging: %s%%",
-    "calamity.generator.sign.ready": "Ready",
-    "calamity.generator.sign.resetting": "Resetting: %s%%",
-    "calamity.generator.sign.type": "[%s%s]",
-    "calamity.generator.statusMessage.chargeSecond": "Charging: %s second left",
-    "calamity.generator.statusMessage.chargeSeconds": "Charging: %s seconds left",
-    "calamity.generator.statusMessage.resettingSecond": "Resetting: %s second left",
-    "calamity.generator.statusMessage.resettingSeconds": "Resetting: %s seconds left",
     "calamity.seekGlory": "Seek glory or fall to calamity!",
+    "calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
+    "calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
+    "calamity.shuffle.newTeam": "%s: %s",
+    "calamity.shuffle.newTeamAdditions": "Shuffled to %s: %s",
+    "calamity.shuffle.playerShuffled.all": "%s shuffled all players",
+    "calamity.shuffle.playerShuffled.rest": "%s shuffled players who were not on a team",
     "calamity.sidelines": "%s moved to the sidelines",
     "calamity.startMatch.countdown.lastFiveSeconds": "%s...",
     "calamity.startMatch.countdown": "Match ▶ begins in %s seconds",
+    "calamity.subtitle.announcer": "Announcer speaks",
     "calamity.subtitle.eye.release": "Eye opened",
     "calamity.subtitle.eye.squish": "Eye squished",
+    "calamity.subtitle.laugh":"8-bit laughter",
     "calamity.team.notReady.blue": "%s %s needs a moment %s",
     "calamity.team.notReady.red": "%s %s says hol' up %s",
     "calamity.team.ready": "%s %s is ready %s",
     "calamity.troll": "%s fell in the troll hole! How embarrassing!",
     "calamity.welcome.objective": "Objective: Calamity is a resource management team race. The first team to get to the point limit wins. Gaining points isn't the only way to win. You can lower the point limit by removing iron ore from the mines. Click %s to view the readme.",
-    "arena.shattering.welcome.objective": "Objective: The first team to get to the point limit wins. Arrows break glass. Generators run much more quickly. Be aggressive! Click %s to view the readme.",
-    "book.pageIndicator": "§ov5.0.0",
-    "arena.calamity.icon": "z",
-    "arena.shattering.icon": "x",
-    "calamity.book.hover.readyTeam": "Toggle your team ready. When both teams are ready, match will start.",
-    "calamity.book.readyTeam": "Ready team",
-    "calamity.match.started.byPlayer": "%s %s started a match",
-    "calamity.book.hover.leaveTeam": "Leave your team. You can still be shuffled onto a team.",
-    "calamity.book.shuffle": "Shuffle players:",
-    "calamity.book.shuffle.all": "all",
-    "calamity.book.shuffle.rest": "rest",
-    "calamity.click.here": "here",
-    "translator.name": "Moesh",
-    "calamity.generator.enchantedItem.valid": "Valid item found! %s given.",
-    "calamity.generator.enchantedItem.invalid": "No valid item found in main hand.",
-    "calamity.generator.enchantedItem.announced": "An %s was created by %s %s!",
-    "calamity.book.toggleGamemode": "Game mode",
-    "calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
-    "calamity.error.noPlayers":"No players are online, ending the match.",
-    "calamity.goal": "Points Race",
-    "calamity.hover.moesh.twitter": "Open twitter.com/HeartlessMoesh",
-    "calamity.hover.panguino.twitter": "Open twitter.com/Panguino",
-    "calamity.hover.moesh.github": "Open github.com/Moesh",
-    "calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
-    "calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
-    "calamity.enchanted.item": "Enchanted Item",
-    "calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
-    "calamity.book.hover.shuffle.restOfPlayers": "Shuffle players who are not on a team",
-    "calamity.book.hover.shuffle.allPlayers": "Shuffle all players, except spectators",
-    "calamity.shuffle.newTeamAdditions": "Shuffled to %s: %s",
-    "calamity.shuffle.newTeam": "%s: %s",
-    "calamity.shuffle.playerShuffled.rest": "%s shuffled players who were not on a team",
-    "calamity.shuffle.playerShuffled.all": "%s shuffled all players",
-    "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
-    "calamity.subtitle.announcer": "Announcer speaks",
+    "calamity.welcome.scripting.by.value":"Jeven, gibbsly, NateThePlate, Panguino, Ts, and Vilder50",
+    "calamity.welcome.scripting.by":"Additional scripting: %s",
+    "calamity.welcome.translation.by.value":"English [en_us] by %s",
+    "calamity.welcome.translation.by":"Translation: %s",
+    "commands.trigger.failed.unprimed": "You're not able to use this command right now",
+    "death.attack.outOfWorld": "%1$s fell to calamity",
+    "map.author.hover.link": "Click to view link",
+    "map.author": "Moesh",
+    "map.name": "Calamity",
+    "spacer.brackets.left": " (%s)",
     "spacer.colon": "%s: %s",
-    "calamity.generator.enchantedItem.alreadyEnchanted": "Item already has this enchantment.",
-    "calamity.generator.enchantedItem.announced.invalid": "%s %s attempted to enchant an item and failed!",
-    "calamity.arena.error.sameArena": "This arena is already selected",
-    "calamity.arena.error.cooldown": "Arena selection is on cooldown",
-    "calamity.arena.loading":"Switching a new arena, please stand-by. This may take some flippa-watts, confulkiesses, and prokies to load...",
-    "calamity.subtitle.laugh":"8-bit laughter",
-    "calamity.generator.start":"Generator starts",
-    "calamity.generator.tick":"Generator ticks",
-    "calamity.generator.output":"Generator output",
-    "calamity.generator.ready":"Generator ready",
-    "calamity.generator.enchantment":"Item enchanted"
+    "spacer.left": " %s",
+    "spacer.middle": "%s %s",
+    "spacer.or": "%s or %s",
+    "spacer.right": "%s ",
+    "system.message": ">>> %s",
+    "team.blue": "Blue",
+    "team.red": "Red",
+    "team.spectator": "Spectator",
+    "translator.name": "Moesh"
 }
