--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -44,8 +44,10 @@
     "calamity.book.title": "Calamity by Moesh",
     "calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
     "calamity.book.toggleGamemode": "Game mode",
+    "calamity.cannot.enter.enemy.spawn": "Cannot enter enemy spawn! Cursed!",
     "calamity.cheated.yourself": "You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
     "calamity.click.here": "here",
+    "calamity.cursed": "Cursed!",
     "calamity.enchanted.item": "Enchanted Item",
     "calamity.error.noPlayers":"No players are online, ending the match.",
     "calamity.feature.notAvailable": "Not available",
