Made menu text changes

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -37,13 +37,13 @@
     "calamity.book.selectArena.title": "Select arena: ",
     "calamity.book.shuffle.all": "all",
     "calamity.book.shuffle.rest": "rest",
-    "calamity.book.shuffle": "Shuffle players:",
+    "calamity.book.shuffle": "Shuffle:",
     "calamity.book.spectate": "Sideline",
     "calamity.book.start": "Start",
     "calamity.book.teams": "Team:",
     "calamity.book.title": "Calamity by Moesh",
     "calamity.book.toggleGamemode.hover": "Toggle game mode between spectator and adventure",
-    "calamity.book.toggleGamemode": "Game mode",
+    "calamity.book.toggleGamemode": "Toggle spectate",
     "calamity.cannot.enter.enemy.spawn": "Cannot enter enemy spawn! Cursed!",
     "calamity.cheated.yourself": "You cheated not only the game, but yourself. You didn't grow. You didn't improve. You took a shortcut and gained nothing. You experienced a hollow victory. Nothing was risked and nothing was gained. It's sad that you don't know the difference.",
     "calamity.click.here": "here",
