Fixes #158: Forfeit messages with negative numbers now have a custom message

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -97,6 +97,7 @@
     "calamity.match.cancelled": "Match %s cancelled",
     "calamity.match.started.byPlayer": "%s %s started a match",
     "calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
+    "calamity.match.stats.forfeit": "%1$s to %2$s. %3$s %4$s won by forfeit, after %6$s!",
     "calamity.notReady": "Not ready",
     "calamity.out.of.bounds": "Out of bounds!",
     "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
@@ -133,10 +134,10 @@
     "calamity.streak.level3":"%s! You are more than what you seem.",
     "calamity.streak.level4.death":"%s: %s point streak ended. Looks like you've been dethroned.",
     "calamity.streak.level4":"%s! How is this possible!",
-    "calamity.streak.level5.death":"%s: %s point streak ended. High threat elminated.",
+    "calamity.streak.level5.death":"%s: %s point streak ended. High threat eliminated.",
     "calamity.streak.level5":"%s! Can nothing stop you?",
     "calamity.streak.level6.death":"%s: %s point streak ended. A legend eliminated. Not a moment too soon!",
-    "calamity.streak.level6":"%s! A calamitious display!",
+    "calamity.streak.level6":"%s! A calamitous display!",
     "calamity.streak.steal.points":"%s steals %s points (%s%%) from %s!",
     "calamity.subtitle.announcer": "Announcer speaks",
     "calamity.subtitle.eye.release": "Eye opened",
