Added missing timestamped translation key

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -164,6 +164,7 @@
     "spacer.or": "%s or %s",
     "spacer.right": "%s ",
     "system.message": ">>> %s",
+    "system.timestamped.message": "[%s] %s",
     "team.blue": "Blue",
     "team.red": "Red",
     "team.spectator": "Spectator",
