--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -143,9 +143,9 @@
     "calamity.subtitle.eye.release": "Eye opened",
     "calamity.subtitle.eye.squish": "Eye squished",
     "calamity.subtitle.laugh":"8-bit laughter",
-    "calamity.team.notReady.blue": "%s %s needs a moment %s",
-    "calamity.team.notReady.red": "%s %s says hol' up %s",
-    "calamity.team.ready": "%s %s is ready %s",
+    "calamity.team.notReady.blue": "%s says %s %s needs a moment %s",
+    "calamity.team.notReady.red": "%s says %s %s needs to hol' up %s",
+    "calamity.team.ready": "%s marked %s %s ready %s",
     "calamity.troll": "%s fell in the troll hole! How embarrassing!",
     "calamity.welcome.objective": "Objective: Calamity is a resource management team race. The first team to get to the point limit wins. Gaining points isn't the only way to win. You can lower the point limit by removing iron ore from the mines. Click %s to view the readme.",
     "calamity.welcome.scripting.by.value":"Jeven, gibbsly, NateThePlate, Panguino, Ts, and Vilder50",
