Added missing text strings for #116

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -85,10 +85,12 @@
     "calamity.generator.tick":"Generator ticks",
     "calamity.goal": "Points Race",
     "calamity.hover.discord.DinnerPartyGames": "Join Dinner Party Games on Discord",
+    "calamity.hover.matchTime":"Match time in ticks: %s",
     "calamity.hover.moesh.github": "Open github.com/Moesh",
     "calamity.hover.moesh.twitter": "Open twitter.com/HeartlessMoesh",
     "calamity.hover.panguino.twitter": "Open twitter.com/Panguino",
     "calamity.hover.sendTriggerCommand": "Click here to send the command to your text box",
+    "calamity.hover.sessionID":"Session ID: %s",
     "calamity.hover.viewGitHub": "Click to view the GitHub repo",
     "calamity.joined.team": "%s joined %s",
     "calamity.left.team": "%s left team %s",
@@ -96,14 +98,14 @@
     "calamity.match.cancelled.noPlayers": "At least one player must be on a team to start a match",
     "calamity.match.cancelled": "Match %s cancelled",
     "calamity.match.started.byPlayer": "%s %s started a match",
-    "calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
     "calamity.match.stats.forfeit": "%1$s to %2$s. %3$s %4$s won by forfeit, after %6$s!",
+    "calamity.match.stats": "%1$s to %2$s. %3$s %4$s won by %5$s points in %6$s!",
     "calamity.notReady": "Not ready",
     "calamity.out.of.bounds": "Out of bounds!",
     "calamity.player.sessionID.mismatch": "SessionID mismatch. You will be processed as a new player.",
     "calamity.player.sidelined": "%s has been moved to the sidelines. Nothing has been affected. The match continues!",
-    "calamity.points": "+%s points",
     "calamity.points.streak": "+%s points (%s streak)",
+    "calamity.points": "+%s points",
     "calamity.prestige.blueForfeit.blue": "You've kept your dignity",
     "calamity.prestige.blueForfeit.red": "Blue knew not to mess with you!",
     "calamity.prestige.lost": "Lost by %s points",
