First pass on match stats

--- a/resourcepacks/calamity/assets/calamity/lang/en_us.json
+++ b/resourcepacks/calamity/assets/calamity/lang/en_us.json
@@ -118,6 +118,17 @@
     "calamity.resetItems.haventChosen": "You haven't selected an item yet. Nothing to reset.",
     "calamity.resetItems": "You will get to select a new item the next time you respawn.",
     "calamity.resetting": "Resetting arena, please stand-by.",
+    "calamity.stats.divider":"---------------------------------",
+    "calamity.stats.match.id":"Match ID: %s",
+    "calamity.stats.goal":"Match type: %s",
+    "calamity.stats.match.status":"Match status: %s",
+    "calamity.stats.match.status.inProgress":"In progress",
+    "calamity.stats.match.status.ended":"Ended",
+    "calamity.stats.arena":"Arena: %s",
+    "calamity.stats.matchID":"Match ID: %s",
+    "calamity.stats.match.time":"Match time: %s (game ticks: %s)",
+    "calamity.stats.score":"Score: %s %s %s vs %s %s %s",
+    "calamity.stats.oreLeft":"Ore left in mines: %s",
     "calamity.seekGlory": "Seek glory or fall to calamity!",
     "calamity.select.respawnItem": "Select your respawn item by using one of these tools.",
     "calamity.shuffle.error.noAvailablePlayers": "No players are available to be shuffled.",
